k8s/base/00-namespace.yaml
# =============================================================================
# Namespace applicatif `salleenfrance`
# =============================================================================
apiVersion: v1
kind: Namespace
metadata:
  name: salleenfrance
  labels:
    app.kubernetes.io/name: salleenfrance
    app.kubernetes.io/part-of: salleenfrance
    app.kubernetes.io/managed-by: kustomize
    environment: dev
    team: esgi-m2
    cost-center: education
